@@ -6,20 +6,21 @@
 #
 # Usage:
 #
-#   produce-separation-files.py  separation_table
+#   produce-separation-data.py  separation_table output_file.yoda
 #
 
 
 import sys,re,yoda,os
 
 if len(sys.argv) != 3:
-    sys.exit("Usage: produce-separation-files.py  separation_table")
+    sys.exit("Usage: produce-separation-data.py  separation_table output_file.yoda")
 
 # open the files
 table = sys.argv[1]
 
 measures=["grej20", "grej50", "qrej20", "qrej50", "srej", "I", "I2"]
-Rvalues=["R3","R6","R9"]
+#Rvalues=["R2","R4","R6","R8", "R10"]
+Rvalues=["R6"]
 observables=["GA_00_00", "GA_20_00", "GA_10_05", "GA_10_10", "GA_10_20"]
 
 scatters=[]
